tests/Rules/Structure/Fixtures/valid/anchor_no_nested_interactive.html.twig
<a href="/home">
  <span>Go home</span>
</a>
