tests/Rules/Structure/Fixtures/invalid/duplicate_ids.html.twig
<div id="foo">A</div>
<span id="bar">B</span>
<p id="foo">C</p>
